Fixed youtube embed to fit on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,6 +111,12 @@ input, select, textarea {
 
 /* Type */
 
+	iframe {
+	aspect-ratio: 16 / 9;
+	height: 100%;
+	width: 100%;
+	}
+
 	html {
 		font-size: 16pt;
 	}
